--- a/src/env/.env.development
+++ b/src/env/.env.development
@@ -1,1 +1,8 @@
 FRASE_LEGAL=batatinha-frita-1-2-3
+
+### DATABASE CONNECTION
+DATABASE_HOST=database
+DATABASE_PORT=5432
+DATABASE_NAME=postgres
+DATABASE_USERNAME=pguser
+DATABASE_PASSWORD=pgpassword
