--- a/src/env/.env.development
+++ b/src/env/.env.development
@@ -1,8 +1,12 @@
+APP_NAME=tripper
 SECRET=S1mZKu4JSlhBQ5LMfWzj85MkSaqZIOMk
 
-### DATABASE CONNECTION
+### POSTGRES CONNECTION
 DATABASE_HOST=database
 DATABASE_PORT=5432
 DATABASE_NAME=postgres
 DATABASE_USERNAME=pguser
 DATABASE_PASSWORD=pgpassword
+
+### MONGO CONNECTION
+CONNECTION_STRING=mongodb://myuser:mypassword@mongodb
