--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "date-fns": "^2.30.0",
     "mongoose": "^7.6.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
